--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -1,15 +1,70 @@
-#cabecera {
-    text-align: center;
-    border: 1px solid;
-    width: 100%;
-    height: 80px;
+* {
+    color: #374045; /* Gris carbón suave para el texto */
+    background-color: #d3e0ea; /* Azul grisáceo pálido para el fondo */
 }
 
-#tituloLogo {
+#cabecera {
+    text-align: center;
+    border-bottom: 1px solid;
+    width: 100%;
+    height: 80px;
     position: absolute;
     top: 0;
     left: 0;
+    background-color: #374045; /* Gris carbón suave para la cabecera */
+    color: #e9e2d0; /* Beige claro para el texto en la cabecera */
+}
+
+#cabecera #tituloLogo {
     text-align: left;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+    margin: 20px 10px 10px 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 215px;
+    font-size: 1.3em;
+    color: #e9e2d0; /* Beige claro para el texto del título */
+}
+
+#tituloLogo h2 a {
+    color: #374045;
+}
+
+a {
+    text-decoration: none;
+    color: #e9e2d0; /* Beige claro para los enlaces */
+}
+
+#menuCabecera {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: absolute;
+    left: 35%;
+    top: 35px;
+    font-size: 1.2em;
+}
+
+#menuCabecera span {
+    margin-left: 20px;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    padding-left: 15px;
+    background-color: #e9e2d0; /* Beige claro para el fondo de los botones */
+    color: #374045; /* Gris carbón suave para el texto de los botones */
+}
+
+#menuCabecera span:hover {
+    background-color: #374045; /* Gris carbón suave al pasar el cursor */
+    color: #d3e0ea; /* Azul grisáceo pálido para el texto */
+    transition: .5s;
+}
+
+#descripcion {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 1px solid;
+    border-radius: 5px;
+    position: absolute;
+    padding: 5px 20px 20px 20px;
+    top: 20%;
+    left: 2%;
+    background-color: #e9e2d0; /* Beige claro para el fondo de la descripción */
+    color: #374045; /* Gris carbón suave para el texto */
 }
