--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -16,21 +16,22 @@
 }
 
 #cabecera #tituloLogo {
-    text-align: left;
     margin: 20px 10px 10px 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 215px;
+    width: 230px;
     font-size: 1.3em;
     color: #e9e2d0; /* Beige claro para el texto del título */
 }
 
 #tituloLogo h2 a {
-    color: #374045;
+    color: #d3e0ea;
+    background-color: #374045;
 }
 
 a {
     text-decoration: none;
     color: #e9e2d0; /* Beige claro para los enlaces */
+    background-color: #374045;
 }
 
 #menuCabecera {
@@ -67,4 +68,23 @@ a {
     left: 2%;
     background-color: #e9e2d0; /* Beige claro para el fondo de la descripción */
     color: #374045; /* Gris carbón suave para el texto */
+    font-size: .95em;
+}
+
+#descripcion h2 {
+    background-color: #e9e2d0;
+    font-weight: bolder;
+}
+
+#resaltado {
+    font-style: italic;
+    background-color: #e9e2d0;
+    text-decoration: underline;
+}
+
+#descripcion a {
+    background-color: #e9e2d0;
+    color: #374045;
+    text-decoration: underline;
+    font-style: italic;
 }
