--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -3,16 +3,25 @@
     background-color: #d3e0ea; /* Azul grisáceo pálido para el fondo */
 }
 
+body {
+    margin: 0;
+    
+}
+
+#cuerpo {
+    height: 800px;
+}
+
 #cabecera {
     text-align: center;
-    border-bottom: 1px solid;
     width: 100%;
     height: 80px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #374045; /* Gris carbón suave para la cabecera */
     color: #e9e2d0; /* Beige claro para el texto en la cabecera */
+    z-index: 1000;
 }
 
 #cabecera #tituloLogo {
@@ -83,6 +92,15 @@ a {
     text-decoration: underline;
 }
 
+#descripcion {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#descripcion:hover {
+    transform: scale(1.05); /* Aumenta el tamaño un 10% */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Agrega una sombra */
+}
+
 #descripcion a {
     background-color: #e9e2d0;
     color: #374045;
@@ -97,15 +115,107 @@ a {
 }
 
 #imgServidor {
-    width: 800px;
-    height: 750px;
+    width: 600px;
+    height: 600px;
     float: right;
     margin-top: 8%;
-    margin-right: 10%;
+    margin-right: 5%;
+}
+
+/* Alineación horizontal para #apache, #wildfly y #glassfish */
+#servidores {
+    display: flex;
+    justify-content: space-between; /* Para que se distribuyan uniformemente */
+    position: relative;
+    top: 400px; /* Ajusta el valor según sea necesario */
+}
+
+#apache, #wildfly, #glassfish {
+    border: 1px solid;
+    width: 220px;
+    height: 300px;
+    border-radius: 5px;
+    background-color: #e9e2d0; /* Fondo para mayor visibilidad */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animación suave */
+}
+
+#apache:hover, #wildfly:hover, #glassfish:hover {
+    transform: scale(1.1); /* Aumenta el tamaño un 10% */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Agrega una sombra */
 }
 
 #apache {
-    border: 1px solid;
-    width: 200px;
+    margin-left: 2.5%;
+}
+
+#glassfish {
+    margin-right: 7.5%;
+}
+
+#imgApache, #imgWildFly, #imgGlassFish {
+    background-color: #e9e2d0;
+    position: relative;
     height: 200px;
+    width: 200px;
+    margin-top: 5px;
+    margin-left: 5%;
+    z-index: 1;
+}
+
+#imgUbuntu, #imgWindows {
+    background-color: #e9e2d0;
+    height: 70px;
+    width: 70px;
+    position: relative;
+    top: 5px;
+    left: 40px;
+    z-index: 5;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#imgUbuntu:hover, #imgWindows:hover {
+    transform: scale(1.3); /* Aumenta el tamaño un 10% */
+}
+
+#servidores a {
+    background-color: #e9e2d0;
+}
+
+#imgFlecha {
+    background-color: #e9e2d0;
+    position: relative;
+    left: 25px;
+    height: 60px;
+    width: 80px;
+}
+
+#pie {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 1px solid; /* Puedes ajustar esto según tu diseño */
+    height: 250px;
+    background-color: #374045;
+}
+
+table {
+    margin-left: 25%;
+    margin-top: 25px;
+    border-collapse: collapse; /* Hace que las celdas compartan los bordes */
+}
+
+table * {
+    background-color: #374045;
+    color: #d3e0ea;
+    font-size: 1.05em;
+}
+
+/* Ajustar el padding si es necesario */
+td {
+    padding-bottom: 15px;
+    padding-right: 100px;
+}
+
+
+#imgMaps, #imgTel, #imgMail, #imgInsta, #imgFace, #imgTwitter, #imgTelegram {
+    height: 15px;
+    width: 15px;
 }
