--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -59,12 +59,12 @@ a {
     padding-left: 15px;
     background-color: #e9e2d0; /* Beige claro para el fondo de los botones */
     color: #374045; /* Gris carbón suave para el texto de los botones */
+    transition: background-color 0.5s ease, color 0.5s ease, transform 0.3s ease;
 }
 
 #menuCabecera span:hover {
-    background-color: #374045; /* Gris carbón suave al pasar el cursor */
-    color: #d3e0ea; /* Azul grisáceo pálido para el texto */
-    transition: .5s;
+    background-color: #374045; /* Gris carbón suave */
+    color: #d3e0ea; /* Azul grisáceo pálido */
 }
 
 #descripcion {
