--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleWILDFLY.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleWILDFLY.css
@@ -9,7 +9,7 @@ body {
 }
 
 #cuerpo {
-    height: 1200px;
+    height: 1000px;
 }
 
 #cabecera {
@@ -55,6 +55,7 @@ section#contenido a:hover {
     transform: rotate(5deg); /* Rotación de 5 grados */
 }
 
+
 #menuCabecera {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     position: absolute;
@@ -79,6 +80,7 @@ section#contenido a:hover {
     color: #d3e0ea; /* Azul grisáceo pálido */
 }
 
+
 #cuerpo {
     padding: 120px 10%; /* Espaciado superior para evitar solapamiento con la cabecera fija */
     font-family: Arial, sans-serif;
@@ -99,10 +101,10 @@ li {
     font-size: 1.75em;
     color: #374045; /* Gris carbón */
     text-align: center;
-    margin-left: 28%;
+    margin-left: 35%;
     margin-bottom: 20px;
     padding: 5px;
-    width: 450px;
+    width: 290px;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
@@ -153,6 +155,10 @@ pre {
     padding: 10px;
     border-radius: 5px;
     overflow-x: auto;
+}
+
+#pasosInstalacion ul li{
+    list-style: square;
 }
 
 #pie {
