Arreglado colores en el logo del poryecto DIW

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleAPACHE.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleAPACHE.css
@@ -12,6 +12,10 @@ body {
     height: 1200px;
 }
 
+#cabecera #tituloLogo h2, #cabecera #tituloLogo h2 a {
+    background-color: #374045;
+}
+
 #cabecera {
     text-align: center;
     width: 100%;
