--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -171,7 +171,6 @@ article:hover, h1:hover {
 }
 
 #contenedorServidores a {
-    background-color: #e9e2d0;
     margin: 2%;
     margin-right: 3%;
 }
@@ -181,12 +180,12 @@ article:hover, h1:hover {
     border-radius: 10px;
     padding: 2%;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.3);
     width: 150px;
     height: 140px;
 }
 
-#imgApache:hover, #imgWildFly:hover, #imgGlassFish:hover {
+#contenedorServidores a:hover>img {
     transform: scale(1.1); /* Aumenta el tamaño un 10% */
     box-shadow: 0 0px 20px rgba(0, 0, 0, 0.5); /* Agrega una sombra */
 }
