--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleINDEX.css
@@ -7,6 +7,17 @@ body {
     margin: 0;
 }
 
+#tituloLogo h2 a {
+    display: inline-block;
+    color: #d3e0ea; /* Azul grisáceo pálido */
+    background-color: #374045;
+    transition: transform 0.3s ease;
+}
+
+#tituloLogo h2 a:hover {
+    transform: scale(1.1) rotate(-2deg);
+}
+
 a {
     text-decoration: none;
 }
