--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleCONTACT.css
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/style/styleCONTACT.css
@@ -5,15 +5,35 @@
 
 body {
     margin: 0;
-    
+}
+
+#tituloLogo h2 a {
+    display: inline-block;
+    color: #d3e0ea; /* Azul grisáceo pálido */
+    background-color: #374045;
+    transition: transform 0.3s ease;
+}
+
+#tituloLogo h2 a:hover {
+    transform: scale(1.1) rotate(-2deg);
+}
+
+a {
+    text-decoration: none;
 }
 
 #cuerpo {
-    height: 300px;
+    height: 500px;
+    padding: 120px 350px; /* Espaciado superior para evitar solapamiento con la cabecera fija */
+    font-family: Arial, sans-serif;
 }
 
 #cabecera #tituloLogo h2, #cabecera #tituloLogo h2 a {
     background-color: #374045;
+}
+
+#cabecera #tituloLogo h2 a {
+    color: #d3e0ea;
 }
 
 #cabecera {
@@ -29,42 +49,20 @@ body {
 }
 
 #cabecera #tituloLogo {
+    background-color: #374045;
+    color: #d3e0ea;
+}
+
+#cabecera #menuCabecera a {
+    background-color: #374045;
+}
+
+#cabecera #tituloLogo {
     margin: 20px 10px 10px 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 230px;
     font-size: 1.3em;
     color: #e9e2d0; /* Beige claro para el texto del título */
-}
-
-a {
-    text-decoration: none;
-    color: #e9e2d0; /* Beige claro para los enlaces */
-    background-color: #374045;
-    transition: background-color 0.5s ease, color 0.5s ease, transform 0.3s ease;
-}
-
-#tituloLogo h2 a {
-    display: inline-block;
-    color: #d3e0ea; /* Azul grisáceo pálido */
-    background-color: #374045;
-    transition: transform 0.3s ease;
-}
-
-#tituloLogo h2 a:hover {
-    transform: scale(1.1) rotate(-2deg);
-}
-
-section#contenido a {
-    display: inline-block;
-    padding: 3px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-section#contenido a:hover {
-    transform: rotate(-3deg) scale(1.2);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35); /* Agrega una sombra */
 }
 
 #menuCabecera {
@@ -91,43 +89,35 @@ section#contenido a:hover {
     color: #d3e0ea; /* Azul grisáceo pálido */
 }
 
-#cuerpo {
-    padding: 120px 10%; /* Espaciado superior para evitar solapamiento con la cabecera fija */
-    font-family: Arial, sans-serif;
-}
-
-li {
-    list-style: none;
-}
-
 #contenido {
     background-color: #e9e2d0; /* Beige claro */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-wrap: wrap; /* Permite que los elementos se ajusten si es necesario */
+    justify-content: space-between; /* Espacia los artículos */
+    align-items: start; /* Alinea los artículos en la parte superior */
+    gap: 5px;
 }
 
 #contenido h1 {
     font-size: 1.75em;
     color: #374045; /* Gris carbón */
     text-align: center;
-    margin-left: 38%;
+    margin-left: 37%;
     margin-bottom: 20px;
     padding: 5px;
-    width: 250px;
+    width: 200px;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
 
-#introduccion, #about {
+article {
     padding: 2px;
     padding-left: 10px;
     border-radius: 5px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-}
-
-#about {
-    margin-top: 25px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); /* Agrega una sombra */
 }
 
 article, h1 {
@@ -136,7 +126,7 @@ article, h1 {
 
 article:hover, h1:hover {
     transform: scale(1.05); /* Aumenta el tamaño un 10% */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Agrega una sombra */
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 0.5); /* Agrega una sombra */
 }
 
 #contenido h2, #contenido h3 {
@@ -147,6 +137,68 @@ article:hover, h1:hover {
 #contenido p {
     margin: 10px 0;
     line-height: 1.5em;
+}
+
+#contacto {
+    margin: auto;
+    text-align: center;
+}
+
+form {
+    margin-top: 10px;
+    margin-left: 50px;
+    text-align: left;
+    font-size: 1.7em;
+}
+
+form label {
+    font-weight: bold;
+}
+
+form input, form button {
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 5px;
+    width: 100%;
+    max-width: 400px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); /* Agrega una sombra */
+}
+
+form input[type=text], form input[type=email] {
+    margin-left: 20px;
+}
+
+form input:hover, form button:hover {
+    transform: scale(1.1); /* Aumenta el tamaño un 10% */
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 0.5); /* Agrega una sombra */
+}
+
+form input[type=checkbox] {
+    margin-left: 15px;
+    width: auto;
+    transform: scale(1.5);
+    transition: transform 0.3s ease;
+}
+
+form input[type=checkbox]:hover {
+    transform: scale(2);
+    cursor: pointer;
+}
+
+#botones {
+    text-align: center;
+    margin-right: 7%
+}
+
+form button {
+    width: 170px;
+    font-size: 1.2em;
+}
+
+form button:hover {
+    cursor: pointer;
 }
 
 #pie {
@@ -173,7 +225,6 @@ td {
     padding-bottom: 15px;
     padding-right: 100px;
 }
-
 
 #imgMaps, #imgTel, #imgMail, #imgInsta, #imgFace, #imgTwitter, #imgTelegram {
     height: 15px;
