Update en Ejercicio de owners en Angular

--- a/CURSO/DWEC/ANGULAR/petclinic/bootcamp-angular/src/app/app.component.html
+++ b/CURSO/DWEC/ANGULAR/petclinic/bootcamp-angular/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div>
     <button routerLink="/owners">Vamos Owners</button>
 </div>
-<app-search 
-[labelButton]="'Vamos a buscar'"
-[placeholder]="'Escribe algo...'"
-(searchEvent)="search($event)"
+<app-search [labelButton]="'Vamos a buscar'" [placeholder]="'Escribe algo...'" (searchEvent)="search($event)"
 ></app-search>
 
 <p>Resultado de la busqueda: {{msgEventSearch}}</p>
