--- a/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/listado/listado.component.html
+++ b/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/listado/listado.component.html
@@ -11,10 +11,10 @@
     </thead>
     <tbody>
       <tr *ngFor="let persona of listaPer" class="table-secondary-emphasis">
-        <td>{{ persona.ID }}</td>
-        <td>{{ persona.DNI }}</td>
-        <td>{{ persona.NOMBRE }}</td>
-        <td>{{ persona.APELLIDOS }}</td>
+        <td>{{ persona.id }}</td>
+        <td>{{ persona.dni }}</td>
+        <td>{{ persona.nombre }}</td>
+        <td>{{ persona.apellidos }}</td>
       </tr>
     </tbody>
   </table>
