--- a/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/listado/listado.component.html
+++ b/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/listado/listado.component.html
@@ -1,4 +1,7 @@
 <h2>Lista de Personas</h2>
+<a routerLink="/personas-add/-1" role="button">Añadir persona (Rutas)</a>
+<button type="button" (click)="iraNuevaPersona()">Añadir persona (programáticamente)</button>
+
 <div class="table-container">
   <table border="1" class="table table-bordered table-striped table-hover">
     <thead>
