--- a/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/form-persona/form-persona.component.html
+++ b/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/form-persona/form-persona.component.html
@@ -2,35 +2,35 @@
 <h3>Añadir nueva persona</h3>
 
 <div id="formNvPers">
-    <form action="">
-        <label for="dni">DNI: </label>
+    <form #personaForm="ngForm" (ngSubmit)="onSubmit(personaForm.value)">
+        <label for="DNI">DNI: </label>
         <br>
-        <input type="text" name="dni" id="dni" required [(ngModel)]="persona.DNI" #dni="ngModel">
+        <input type="text" name="DNI" id="DNI" required [(ngModel)]="persona.DNI" #dni="ngModel">
         <!--<div [hidden]="dni.valid || dni.pristine" >
             El DNI es obligatorio
         </div>-->
 
         <br><br>
 
-        <label for="nombre">Nombre: </label>
+        <label for="NOMBRE">Nombre: </label>
         <br>
-        <input type="text" name="nombre" id="nombre" required [(ngModel)]="persona.NOMBRE" #nombre="ngModel">
+        <input type="text" name="NOMBRE" id="NOMBRE" required [(ngModel)]="persona.NOMBRE" #nombre="ngModel">
         <!--<div [hidden]="nombre.valid || nombre.pristine" >
             El NOMBRE es obligatorio
         </div>-->
 
         <br><br>
 
-        <label for="apellidos">Apellidos: </label>
+        <label for="APELLIDOS">Apellidos: </label>
         <br>
-        <input type="text" name="apellidos" id="apellidos" required [(ngModel)]="persona.APELLIDOS" #apellidos="ngModel">
+        <input type="text" name="APELLIDOS" id="APELLIDOS" required [(ngModel)]="persona.APELLIDOS" #apellidos="ngModel">
         <!--<div [hidden]="apellidos.valid || apellidos.pristine" >
             El APELLIDO es obligatorio
         </div>-->
 
         <br><br>
 
-        <button type="button">{{textoBoton}}</button>
+        <button type="button" type="submit" [disabled]="!personaForm.valid">{{textoBoton}}</button>
         <button type="button" routerLink="/">Cancelar</button>
     </form>
 </div>
