--- a/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/form-persona/form-persona.component.html
+++ b/CURSO/DWEC/ANGULAR/listadoPersonasModulos/src/app/componentes/form-persona/form-persona.component.html
@@ -6,31 +6,31 @@
         <label for="dni">DNI: </label>
         <br>
         <input type="text" name="dni" id="dni" required [(ngModel)]="persona.dni" #dni="ngModel">
-        <!--<div [hidden]="dni.valid || dni.pristine" >
+        <div [hidden]="dni.valid || dni.pristine" >
             El DNI es obligatorio
-        </div>-->
+        </div>
 
         <br><br>
 
         <label for="nombre">Nombre: </label>
         <br>
         <input type="text" name="nombre" id="nombre" required [(ngModel)]="persona.nombre" #nombre="ngModel">
-        <!--<div [hidden]="nombre.valid || nombre.pristine" >
+        <div [hidden]="nombre.valid || nombre.pristine" >
             El NOMBRE es obligatorio
-        </div>-->
+        </div>
 
         <br><br>
 
         <label for="apellidos">Apellidos: </label>
         <br>
         <input type="text" name="apellidos" id="apellidos" required [(ngModel)]="persona.apellidos" #apellidos="ngModel">
-        <!--<div [hidden]="apellidos.valid || apellidos.pristine" >
+        <div [hidden]="apellidos.valid || apellidos.pristine" >
             El APELLIDO es obligatorio
-        </div>-->
+        </div>
 
         <br><br>
 
-        <button type="button" type="submit" [disabled]="!personaForm.valid">{{textoBoton}}</button>
+        <button type="submit" [disabled]="!personaForm.valid">{{textoBoton}}</button>
         <button type="button" routerLink="/">Cancelar</button>
     </form>
 </div>
