--- a/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
+++ b/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
@@ -1,6 +1,10 @@
 <h2>Listado de detalles de la factura</h2>
 
 <div>
+    <button type="button" (click)="toggleForm()">Nuevo detalle</button>
+
+    <br><br>
+
     <table border="1">
         <thead>
             <tr>
@@ -20,8 +24,42 @@
                 <td>{{detalleFactura.precio}}</td>
                 <td>{{detalleFactura.iva}}</td>
                 <td>{{detalleFactura.total}}</td>
+            </tr>
+            <tr>
+                <td colspan="4">TOTALES</td>
+                <td>{{totalesIVA}}</td>
+                <td>{{totalesTotal}}</td>
+            </tr>
         </tbody>
     </table>
     <br>
     <button type="button" [routerLink]="['/']">Volver atrás</button>
+</div>
+
+<br><br>
+
+<div id="formDetalle" *ngIf="mostrarFormulario">
+    <form #detalleForm="ngForm" (ngSubmit)="onSubmit(detalleForm.value)">
+        <label for="cantidad">Cantidad: </label>
+        <input type="number" id="cantidad" name="cantidad" ngModel required>
+
+        <br><br>
+      
+        <label for="concepto">Concepto: </label>
+        <input type="text" id="concepto" name="concepto" ngModel required>
+
+        <br><br>
+      
+        <label for="precio">Precio: </label>
+        <input type="number" id="precio" name="precio" ngModel required>
+
+        <br><br>
+      
+        <label for="tipo_iva">Tipo IVA: </label>
+        <input type="number" id="tipo_iva" name="tipo_iva" ngModel required>
+
+        <br><br>
+      
+        <button type="submit" [disabled]="!detalleForm.valid">Nuevo detalle</button>
+    </form>      
 </div>
