--- a/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
+++ b/CURSO/DWEC/ANGULAR/Para_Alumnado/examenAngular/src/app/components/lista-detalle/lista-detalle.component.html
@@ -60,6 +60,6 @@
 
         <br><br>
       
-        <button type="submit" [disabled]="!detalleForm.valid">Nuevo detalle</button>
+        <button type="submit" [disabled]="!detalleForm.valid">Añadir línea de detalle</button>
     </form>      
 </div>
