--- a/CURSO/DWEC/ANGULAR/PruebasSinStandalone/examenAngular/src/app/components/principal/principal.component.html
+++ b/CURSO/DWEC/ANGULAR/PruebasSinStandalone/examenAngular/src/app/components/principal/principal.component.html
@@ -19,7 +19,7 @@
                     </a>
                 </td>
                 <td>{{factura.id_cliente}}</td>
-                <td>{{factura.fecha}}</td> <!-- Formatear la fecha -->
+                <td>{{factura.fecha}}</td>
             </tr>
         </tbody>
     </table>
