Añadido EditarOwner en pet_clinic

--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/form-owner/form-owner.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/form-owner/form-owner.component.html
@@ -47,7 +47,9 @@
 
         <br>
 
-        <button type="submit" [disabled]="!ownerForm.valid">Añadir owner</button>
+        <input type="hidden" name="id" id="id" [(ngModel)]="owner.id">
+
+        <button type="submit" [disabled]="!ownerForm.valid">{{textoBoton}}</button>
         <button type="button" [routerLink]="['/']">Cancelar</button>
     </form>
 </div>
