--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/owners/owners.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/owners/owners.component.html
@@ -17,7 +17,7 @@
       @for (owner of owners; track $index) {
         <tr>
           <td>{{ owner.id }}</td>
-          <td><a [routerLink]="">{{ owner.firstName }}</a></td>
+          <td><a [routerLink]="['form-owner', owner.id]">{{ owner.firstName }}</a></td>
           <td>{{ owner.lastName }}</td>
           <td>{{ owner.address }}</td>
           <td>{{ owner.city }}</td>
