Añadida funcionalidad de borrarPet en pet_clinic

--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/detail-owner/detail-owner.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/detail-owner/detail-owner.component.html
@@ -25,4 +25,4 @@
 
 <hr><hr>
 
-<app-pet-list [pets]="pets"></app-pet-list>
+<app-pet-list [pets]="pets" (petDeleted)="actualizarLista($event)"></app-pet-list>
