--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
@@ -16,7 +16,7 @@
         </tr>
     </table>
     <button type="button">Editar Pet</button> || 
-    <button type="button">Eliminar Pet</button> ||
+    <button type="button" (click)="borrarPet(pet.id, pet.name)">Eliminar Pet</button> ||
     <button type="button">Añadir Visita</button>
     <br><br>
     <hr align="left" width="20%">
