--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
@@ -15,7 +15,7 @@
             <td>{{pet.typeName}}</td>
         </tr>
     </table>
-    <button type="button">Editar Pet</button> || 
+    <button type="button" (click)="irAPetAdd(pet)">Editar Pet</button> || 
     <button type="button" (click)="borrarPet(pet.id, pet.name)">Eliminar Pet</button> ||
     <button type="button">Añadir Visita</button>
     <br><br>
